tests/pass/test-float1.mc
int main()
{
  float a;
  a = 3.14159267;
  printf("%g\n", a);
  return 0;
}
