tests/fail/fail-comp1.mc
int main(){
  3.4 < 4; /* Error: cannot compare different types */
  return 0;
}
